[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-flake8-plugins"
version = "1.5.0"
description = ""
authors = ["Christian Riedel <cielquan@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dummy.py"}]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = ">=4"
pydocstyle = ">=5"
pep8-naming = ">=0.12"
flake8-aaa = ">=0.12.2"
flake8-annotations = ">=2.7"
flake8-bandit = ">=3.0"
flake8-broken-line = ">=0.4"
flake8-bugbear = ">=22.1"
flake8-cognitive-complexity = ">=0.1"
flake8-comprehensions = ">=3.8"
flake8-docstrings = ">=1.6"
flake8-eradicate = ">=1.2"
eradicate = ">=2.1"
flake8-logging-format = ">=0.6"
flake8-pytest-style = ">=1.6"
flake8-rst-docstrings = ">=0.2.5"
flake8-simplify = ">=0.15.1"
flake8-sql = ">=0.4.1"
flake8-typing-imports = ">=1.12"
flake8-use-fstring = ">=1.3"
flake8-variables-names = ">=0.0.4"
flake8-walrus = {version = ">=1.1", python = ">=3.8"}
flakeheaven = {version = ">=0.11", optional = true}

[tool.poetry.extras]
flakeheaven = ["flakeheaven"]
